[workspace]
resolver = "3"
members = ["crates/*"]
default-members = ["crates/feap_editor"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
tracing = { version = "0.1", default-features = false }
log = { version = "0.4", default-features = false }

thiserror = { version = "2", default-features = false }
downcast-rs = { version = "2", default-features = false }
foldhash = { version = "0.2.0", default-features = false }
hashbrown = { version = "0.16.0", features = [
    "equivalent",
    "raw-entry",
], default-features = false }
