[workspace]
resolver = "3"
members = ["crates/*"]
default-members = ["crates/feap_editor"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"

[workspace.dependencies]
tracing = { version = "0.1", default-features = false }
log = { version = "0.4", default-features = false }

thiserror = { version = "2", default-features = false }
downcast-rs = { version = "2", default-features = false }
derive_more = { version = "2", default-features = false, features = [
    "from",
    "display",
    "into",
    "as_ref",
] }
bitflags = { version = "2.3", default-features = false }
fixedbitset = { version = "0.5", default-features = false }
smallvec = { version = "1", default-features = false, features = [
    "union",
    "const_generics",
] }
foldhash = { version = "0.2.0", default-features = false }
hashbrown = { version = "0.16.0", features = [
    "equivalent",
    "raw-entry",
], default-features = false }
indexmap = { version = "2.5.0", default-features = false }
slotmap = { version = "1.0.7", default-features = false }
nonmax = { version = "0.5", default-features = false }
variadics_please = { version = "1.1", default-features = false }

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
