[package]
name = "feap_app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = []

trace = ["dep:tracing"]
serialize = []

std = ["feap_core/std", "feap_ecs/std"]


[dependencies]
feap_core = { path = "../feap_core" }
feap_ecs = { path = "../feap_ecs" }

tracing = { workspace = true, optional = true }
log = { workspace = true }
thiserror = { workspace = true }
downcast-rs = { workspace = true }
