[package]
name = "feap_ecs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = []

trace = []
serialize = []

std = []

multi_threaded = []

## Provides more detailed tracking of the cause of various effects within the ECS.
## This will often provide more detailed error messages.
track_location = []

[dependencies]
feap_core = { path = "../feap_core" }
feap_utils = { path = "../feap_utils" }
feap_ecs_macros = { path = "macros" }

thiserror.workspace = true
log.workspace = true
bitflags.workspace = true
fixedbitset.workspace = true
smallvec.workspace = true
indexmap.workspace = true
slotmap.workspace = true
nonmax.workspace = true
variadics_please.workspace = true
