[package]
name = "feap_editor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["trace", "default_platform", "backtrace"]

trace = ["feap_app/trace"]
backtrace = ["feap_ecs/backtrace"]

default_platform = ["std"]
std = ["feap_app/std"]

[dependencies]
feap_app = { path = "../feap_app" }
feap_ecs = { path = "../feap_ecs" }
